// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot 1`] = `
<AvatarMeetingsListItem>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  title="C"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with avatarProps 1`] = `
<AvatarMeetingsListItem
  avatarProps={
    Object {
      "presence": "active",
      "title": "Cisco",
    }
  }
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                presence="active"
                size={32}
                title="Cisco"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  title="Cisco"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                  <Presence
                    isCircularWrapper={true}
                    presenceColor="var(--mds-color-theme-indicator-stable)"
                    presenceIcon="unread"
                    size={32}
                  >
                    <div
                      className="md-avatar-presence-icon-wrapper"
                      data-shape={true}
                    >
                      <Icon
                        fillColor="var(--mds-color-theme-indicator-stable)"
                        name="unread"
                        scale={14}
                        strokeColor="none"
                        weight="filled"
                      >
                        <div
                          aria-hidden="true"
                          className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            className=""
                            data-autoscale={false}
                            data-scale={14}
                            data-test="unread"
                            height="100%"
                            style={
                              Object {
                                "fill": "var(--mds-color-theme-indicator-stable)",
                                "stroke": "none",
                              }
                            }
                            viewBox="0, 0, 32, 32"
                            width="100%"
                          />
                        </div>
                      </Icon>
                    </div>
                  </Presence>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with className 1`] = `
<AvatarMeetingsListItem
  className="example-class"
>
  <ListItemBase
    className="example-class md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="example-class md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  title="C"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with displayMoreAction 1`] = `
<AvatarMeetingsListItem
  displayActions={
    Array [
      "more",
    ]
  }
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  title="C"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            >
              <ButtonCircle
                ghost={true}
                size={28}
              >
                <ButtonSimple
                  aria-disabled={false}
                  className="md-button-circle-wrapper"
                  data-color="primary"
                  data-disabled={false}
                  data-ghost={true}
                  data-inverted={false}
                  data-multiple-children={false}
                  data-outline={false}
                  data-shallow-disabled={false}
                  data-size={28}
                >
                  <FocusRing>
                    <FocusRing
                      focusClass="md-focus-ring-wrapper children"
                      focusRingClass="md-focus-ring-wrapper children"
                    >
                      <button
                        className="md-button-circle-wrapper md-button-simple-wrapper"
                        data-color="primary"
                        data-disabled={false}
                        data-ghost={true}
                        data-inverted={false}
                        data-multiple-children={false}
                        data-outline={false}
                        data-shallow-disabled={false}
                        data-size={28}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchCancel={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        type="button"
                      >
                        <Icon
                          name="more"
                          scale={16}
                          weight="bold"
                        >
                          <div
                            aria-hidden="true"
                            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              className=""
                              data-autoscale={false}
                              data-scale={16}
                              data-test="more"
                              fill="currentColor"
                              height="100%"
                              style={Object {}}
                              viewBox="0, 0, 32, 32"
                              width="100%"
                            />
                          </div>
                        </Icon>
                      </button>
                    </FocusRing>
                  </FocusRing>
                </ButtonSimple>
              </ButtonCircle>
            </div>
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with displayMuteAction && !isMuted 1`] = `
<AvatarMeetingsListItem
  displayActions={
    Array [
      "mute",
    ]
  }
  isMuted={false}
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  title="C"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            >
              <ButtonCircle
                ghost={true}
                size={28}
              >
                <ButtonSimple
                  aria-disabled={false}
                  className="md-button-circle-wrapper"
                  data-color="primary"
                  data-disabled={false}
                  data-ghost={true}
                  data-inverted={false}
                  data-multiple-children={false}
                  data-outline={false}
                  data-shallow-disabled={false}
                  data-size={28}
                >
                  <FocusRing>
                    <FocusRing
                      focusClass="md-focus-ring-wrapper children"
                      focusRingClass="md-focus-ring-wrapper children"
                    >
                      <button
                        className="md-button-circle-wrapper md-button-simple-wrapper"
                        data-color="primary"
                        data-disabled={false}
                        data-ghost={true}
                        data-inverted={false}
                        data-multiple-children={false}
                        data-outline={false}
                        data-shallow-disabled={false}
                        data-size={28}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchCancel={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        type="button"
                      >
                        <Icon
                          fillColor={false}
                          name="audio-microphone-on-green-colored"
                          scale={16}
                          strokeColor="none"
                          weight="bold"
                        >
                          <div
                            aria-hidden="true"
                            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              className=""
                              data-autoscale={false}
                              data-scale={16}
                              data-test="audio-microphone-on-green-colored"
                              fill="currentColor"
                              height="100%"
                              style={
                                Object {
                                  "stroke": "none",
                                }
                              }
                              viewBox="0, 0, 32, 32"
                              width="100%"
                            />
                          </div>
                        </Icon>
                      </button>
                    </FocusRing>
                  </FocusRing>
                </ButtonSimple>
              </ButtonCircle>
            </div>
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with displayMuteAction 1`] = `
<AvatarMeetingsListItem
  displayActions={
    Array [
      "mute",
    ]
  }
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  title="C"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            >
              <ButtonCircle
                ghost={true}
                size={28}
              >
                <ButtonSimple
                  aria-disabled={false}
                  className="md-button-circle-wrapper"
                  data-color="primary"
                  data-disabled={false}
                  data-ghost={true}
                  data-inverted={false}
                  data-multiple-children={false}
                  data-outline={false}
                  data-shallow-disabled={false}
                  data-size={28}
                >
                  <FocusRing>
                    <FocusRing
                      focusClass="md-focus-ring-wrapper children"
                      focusRingClass="md-focus-ring-wrapper children"
                    >
                      <button
                        className="md-button-circle-wrapper md-button-simple-wrapper"
                        data-color="primary"
                        data-disabled={false}
                        data-ghost={true}
                        data-inverted={false}
                        data-multiple-children={false}
                        data-outline={false}
                        data-shallow-disabled={false}
                        data-size={28}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchCancel={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        type="button"
                      >
                        <Icon
                          fillColor="var(--mds-color-theme-text-error-normal)"
                          name="microphone-muted"
                          scale={16}
                          strokeColor="none"
                          weight="bold"
                        >
                          <div
                            aria-hidden="true"
                            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              className=""
                              data-autoscale={false}
                              data-scale={16}
                              data-test="microphone-muted"
                              height="100%"
                              style={
                                Object {
                                  "fill": "var(--mds-color-theme-text-error-normal)",
                                  "stroke": "none",
                                }
                              }
                              viewBox="0, 0, 32, 32"
                              width="100%"
                            />
                          </div>
                        </Icon>
                      </button>
                    </FocusRing>
                  </FocusRing>
                </ButtonSimple>
              </ButtonCircle>
            </div>
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with firstLine 1`] = `
<AvatarMeetingsListItem
  firstLine="firstLine"
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  title="C"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper"
                    data-type="body-primary"
                  >
                    firstLine
                  </p>
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with id 1`] = `
<AvatarMeetingsListItem
  id="example-id"
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    id="example-id"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          id="example-id"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  title="C"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with scheduler state = available 1`] = `
<AvatarMeetingsListItem
  schedulerState="available"
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  title="C"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <Icon
                fillColor="var(--mds-color-theme-text-success-normal)"
                name="scheduler-available"
                scale={16}
                strokeColor="none"
                weight="bold"
              >
                <div
                  aria-hidden="true"
                  className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-autoscale={false}
                    data-scale={16}
                    data-test="scheduler-available"
                    height="100%"
                    style={
                      Object {
                        "fill": "var(--mds-color-theme-text-success-normal)",
                        "stroke": "none",
                      }
                    }
                    viewBox="0, 0, 32, 32"
                    width="100%"
                  />
                </div>
              </Icon>
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with scheduler state = quiet-hours 1`] = `
<AvatarMeetingsListItem
  schedulerState="quiet-hours"
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  title="C"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <Icon
                fillColor="var(--mds-color-theme-text-secondary-normal)"
                name="scheduler-not-working-hours"
                scale={16}
                strokeColor="none"
                weight="bold"
              >
                <div
                  aria-hidden="true"
                  className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-autoscale={false}
                    data-scale={16}
                    data-test="scheduler-not-working-hours"
                    height="100%"
                    style={
                      Object {
                        "fill": "var(--mds-color-theme-text-secondary-normal)",
                        "stroke": "none",
                      }
                    }
                    viewBox="0, 0, 32, 32"
                    width="100%"
                  />
                </div>
              </Icon>
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with scheduler state = unavailable 1`] = `
<AvatarMeetingsListItem
  schedulerState="unavailable"
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  title="C"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <Icon
                fillColor="var(--mds-color-theme-text-warning-normal)"
                name="scheduler-unavailable"
                scale={16}
                strokeColor="none"
                weight="bold"
              >
                <div
                  aria-hidden="true"
                  className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-autoscale={false}
                    data-scale={16}
                    data-test="scheduler-unavailable"
                    height="100%"
                    style={
                      Object {
                        "fill": "var(--mds-color-theme-text-warning-normal)",
                        "stroke": "none",
                      }
                    }
                    viewBox="0, 0, 32, 32"
                    width="100%"
                  />
                </div>
              </Icon>
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with scheduler state = unknown 1`] = `
<AvatarMeetingsListItem
  schedulerState="unknown"
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  title="C"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <Icon
                fillColor="var(--mds-color-theme-text-error-normal)"
                name="scheduler-unknown"
                scale={16}
                strokeColor="none"
                weight="bold"
              >
                <div
                  aria-hidden="true"
                  className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-autoscale={false}
                    data-scale={16}
                    data-test="scheduler-unknown"
                    height="100%"
                    style={
                      Object {
                        "fill": "var(--mds-color-theme-text-error-normal)",
                        "stroke": "none",
                      }
                    }
                    viewBox="0, 0, 32, 32"
                    width="100%"
                  />
                </div>
              </Icon>
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with secondLine 1`] = `
<AvatarMeetingsListItem
  secondLine="secondLine"
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  title="C"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper"
                    data-type="body-primary"
                  />
                </Text>
                <Text
                  type="body-secondary"
                >
                  <small
                    className="md-text-wrapper"
                    data-type="body-secondary"
                  >
                    secondLine
                  </small>
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;

exports[`<AvatarMeetingsListItem /> snapshot should match snapshot with style 1`] = `
<AvatarMeetingsListItem
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ListItemBase
    className="md-avatar-meetings-list-item-wrapper"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    shape="isPilled"
    size={50}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <FocusRing
      isInset={false}
    >
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
        isInset={false}
      >
        <li
          className="md-avatar-meetings-list-item-wrapper md-list-item-base-wrapper"
          data-disabled={false}
          data-interactive={true}
          data-padded={false}
          data-shape="isPilled"
          data-size={50}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="listitem"
          style={
            Object {
              "color": "pink",
            }
          }
          tabIndex={0}
        >
          <ListItemBaseSection
            position="start"
          >
            <div
              data-position="start"
            >
              <Avatar
                size={32}
                title="C"
              >
                <div
                  className="md-avatar-wrapper"
                  data-color="default"
                  data-size={32}
                  title="C"
                >
                  <Initials
                    className="md-avatar-wrapper-children"
                    initials="C"
                    type="person"
                  >
                    <span
                      className="md-avatar-wrapper-children"
                    >
                      C
                    </span>
                  </Initials>
                </div>
              </Avatar>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-text-wrapper"
            position="middle"
          >
            <div
              className="md-avatar-meetings-list-item-text-wrapper"
              data-position="middle"
            >
              <div>
                <Text
                  type="body-primary"
                >
                  <p
                    className="md-text-wrapper"
                    data-type="body-primary"
                  />
                </Text>
              </div>
            </div>
          </ListItemBaseSection>
          <ListItemBaseSection
            className="md-avatar-meetings-list-item-actions-wrapper"
            position="end"
          >
            <div
              className="md-avatar-meetings-list-item-actions-wrapper"
              data-position="end"
            />
          </ListItemBaseSection>
        </li>
      </FocusRing>
    </FocusRing>
  </ListItemBase>
</AvatarMeetingsListItem>
`;
